--- a/internal/server/ui/components/file_explorer/dnd.templ
+++ b/internal/server/ui/components/file_explorer/dnd.templ
@@ -6,11 +6,11 @@ templ dnd(pageState types.PageState) {
 	<div
 		id="file-upload-area"
 		class="dnd-overlay"
-		hx-on:dragenter="activateDropZone(event)"
-		hx-on:dragover="preventDefault(event)"
-		hx-on:dragleave="deactivateDropZone(event)"
-		hx-on:drop={ templ.JSFuncCall("dropFiles", templ.JSExpression("event"), "", pageState.RootDir) }
-		hx-on:click="document.getElementById('file-upload-input').click()"
+		ondragenter="activateDropZone(event)"
+		ondragover="preventDefault(event)"
+		ondragleave="deactivateDropZone(event)"
+		ondrop={ templ.JSFuncCall("dropFiles", templ.JSExpression("event"), "", pageState.RootDir) }
+		onclick="document.getElementById('file-upload-input').click()"
 	>
 		Drop files here&#8230;
 	</div>
