--- a/internal/server/ui/components/file_explorer/explorer_context_menu/component.templ
+++ b/internal/server/ui/components/file_explorer/explorer_context_menu/component.templ
@@ -15,7 +15,7 @@ templ Component(pageState types.PageState) {
 				<button
 					type="button"
 					class="context-menu-item"
-					hx-on:click={ templ.JSUnsafeFuncCall(fmt.Sprintf("closeContextMenuFromItem(event); newFile(event, '%s')", pageState.RootDir)) }
+					onclick={ templ.JSUnsafeFuncCall(fmt.Sprintf("closeContextMenuFromItem(event); newFile(event, '%s')", pageState.RootDir)) }
 				>
 					New File
 				</button>
@@ -25,7 +25,7 @@ templ Component(pageState types.PageState) {
 				<button
 					type="button"
 					class="context-menu-item"
-					hx-on:click="closeContextMenuFromItem(event); showFolderDetails(event)"
+					onclick="closeContextMenuFromItem(event); showFolderDetails(event)"
 				>
 					Details
 				</button>
