--- a/internal/server/ui/components/file_explorer/context_menu_items/component.templ
+++ b/internal/server/ui/components/file_explorer/context_menu_items/component.templ
@@ -22,7 +22,7 @@ templ Component(pageState types.PageState, file fs.FileInfo, rootDir string) {
 			href={ templ.SafeURL(downloadPath) }
 			download
 			class="context-menu-item"
-			hx-on:click="closeContextMenuFromItem(event)"
+			onclick="closeContextMenuFromItem(event)"
 		>
 			Download
 		</a>
@@ -30,7 +30,7 @@ templ Component(pageState types.PageState, file fs.FileInfo, rootDir string) {
 	<button
 		type="button"
 		class="context-menu-item"
-		hx-on:click={ templ.JSUnsafeFuncCall(fmt.Sprintf("closeContextMenuFromItem(event); moveFile(event, '%s', '%s')", rootDir, fileName)) }
+		onclick={ templ.JSUnsafeFuncCall(fmt.Sprintf("closeContextMenuFromItem(event); moveFile(event, '%s', '%s')", rootDir, fileName)) }
 	>
 		Rename/Move
 	</button>
@@ -41,7 +41,7 @@ templ Component(pageState types.PageState, file fs.FileInfo, rootDir string) {
 		hx-swap="outerHTML"
 		hx-delete={ filepath.Join(`/api/v1/files`) }
 		hx-vals={ `{"rootDir":"` + rootDir + `", "filePaths":["` + fileName + `"]}` }
-		hx-on:click="closeContextMenuFromItem(event)"
+		onclick="closeContextMenuFromItem(event)"
 	>
 		Delete
 	</button>
