--- a/internal/server/ui/components/file_explorer/file_navigation/component.templ
+++ b/internal/server/ui/components/file_explorer/file_navigation/component.templ
@@ -4,16 +4,14 @@ import "autobutler/internal/server/ui/types"
 import "autobutler/internal/server/ui/components/icons/left_arrow"
 
 templ Component(pageState types.PageState) {
-	{{ isAtRoot := pageState.RootDir == "" || pageState.RootDir == "/" }}
 	<div class="file-navigation">
 		<button
 			id="nav-back-btn"
 			class="btn btn--icon btn--secondary"
-			onclick="history.back()"
+			onclick="navigateBack()"
 			title="Go Back"
 			type="button"
 			aria-label="Navigate backward"
-			disabled?={ isAtRoot }
 		>
 			@left_arrow.Component()
 		</button>
