--- a/internal/server/ui/components/header/component.templ
+++ b/internal/server/ui/components/header/component.templ
@@ -19,5 +19,7 @@ templ Component() {
 		<link rel="manifest" href="/public/manifest.json"/>
 		<link rel="stylesheet" href="/public/styles/site.css" type="text/css"/>
 		<link rel="stylesheet" href="/public/vendor/toastr/toastr.min.css" type="text/css"/>
+		<link rel="stylesheet" href="public/vendor/pdfjs/pdf.min.mjs" type="module"/>
+		<link rel="stylesheet" href="public/vendor/pdfjs/pdf_viewer.min.css" type="text/css"/>
 	</head>
 }
