Devices storage bar (#358)

--- a/internal/server/public/styles/site.css
+++ b/internal/server/public/styles/site.css
@@ -8,6 +8,8 @@
 @import url('icons.css');
 @import url('hero.css');
 @import url('landing.css');
+@import url('storage_bar.css');
+@import url('storage_partition.css');
 @import url('devices.css');
 @import url('file-explorer.css');
 @import url('calendar.css');
